
2021-11-14  Ron Norman <rjn@inglenet.com>

	* reserved.c: Add bit-wise words B-AND, B-NOT, B-OR, B-SHIFT-L, B-SHIFT-R
				B-XOR, B-SHIFT-LC, B-SHIFT-RC
	* parser.y: Add grammar for handling the BIT-WISE operations
	* typeck.c: Add checks for handling the BIT-WISE operations
	* tree.c: Add checks for handling the BIT-WISE operations
	* codegen.c: Add code emission for the BIT-WISE operations

2021-11-10  Ron Norman <rjn@inglenet.com>

	* cobc.c: Init cb_mf_files to 0
	* codegen.c: Add some exceptions for -std=cobol85
	* typeck.c: Add exception for -std=cobol85 for the COBOL85 tests

2021-11-09  Ron Norman <rjn@inglenet.com>

	* config.def: Added 'record-sequential-advancing' 
	* codegen.c: Is ORGANIZATION was not defined in SELECT but
				WRITE ADVANCING was used then default to LINE SEQUENTIAL
	* typeck.c: If ORGANIZATION not specific and WRITE ADVANCING default
				to LINE SEQUENTIAL based on 'record-sequential-advancing'
				

2021-11-08  Ron Norman <rjn@inglenet.com>

	* tree.h: Add for file flag_has_organization
	* codegen.c: Is ORGANIZATION was not defined in SELECT but
				WRITE ADVANCING was used then default to LINE SEQUENTIAL
				(This will soon become an option)
	* parser.y: Set flag flag_has_organization if ORGANIZATION was define
	* typeck.c: If ORGANIZATION not specific and WRITE ADVANCING default
				to LINE SEQUENTIAL
				(This will soon become an option)

2021-11-05  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (compute_size): adjusted check to correctly catch items bigger
	  than 2 GB
	* tree.c (get_pic_number_from_str) [COB_64_BIT_POINTER]: allow up to
	  10 significant digits
	* tree.c (cb_build_picture): check for value <= INT_MAX

2021-11-01  Ron Norman <rjn@inglenet.com>

	* typeck.c (cb_emit_write): For LINE SEQUENTIAL, default WRITE with no
				ADVANCING to AFTER ADVANCING 1 LINE

2021-10-30  Ron Norman <rjn@inglenet.com>

	* parser.y: For ASSIGN PRINTER or PRINTER-1 set file type to 
				LINE ADVANCING
