@@ -1,4 +1,10 @@
 
+2021-11-15  Ron Norman <rjn@inglenet.com>
+
+	* field.c (validate_elem_value): Accept multi VALUES for simple OCCURS
+	* tree.h: Add flag_occurs_values to cb_field
+	* codegen.c: Handle initialize of OCCURS with multiple VALUES
+
 2021-11-14  Ron Norman <rjn@inglenet.com>
 
 	* reserved.c: Add bit-wise words B-AND, B-NOT, B-OR, B-SHIFT-L, B-SHIFT-R
